разбирался с pom, пытался сделать surfire и удалил тест PerformanceBudu